2002-12-31  Cristy  <cristy@mystic.es.dupont.com>
	* magick/command.c: Do not quantize CMYK (bug fix).
	* magick/render.c: Ensure that stroke is not drawn wider than
	requested when antialiasing is disabled (bug fix).

2002-12-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* magick/image.c: For TransformRGBImage() and RGBTransformImage()
	round values to int when creating tables rather than using scaling
	to avoid rounding.

2002-12-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* coders/png.c: Fixed compile problems.
	* magick/image.c: SyncImage() performance optimizations.
	* TransformRGBImage() cleanup/enhancements. Some rounding issues remain.
	* RGBTransformImage() cleanup/enhancements. Some rounding issues remain.

2002-12-24  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
	* BUGFIX: Fixed bug, introduced on 12/18/02, in which a misplaced
	 "}" caused an assertion failure after reading any opaque JNG image.
	* Added CloseBlob before returning a NULL JNG image.
	* Merged png.c with IM-5.5.3-1, including a seemingly pointless
	rename of SaveImagText string to SaveImageTag.

2002-12-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* magick/image.c: Optimized gray x, y, z, tables creation in
	RGBTransformImage().

2002-12-27  Cristy  <cristy@mystic.es.dupont.com>
	* coders/pcd.c: IsPCDImage() fix offset to test header magic.
	* coders/pcd.c: Ensure that blob is closed on error.
	* coders (all): Pass image->colorspace to TransformRGBImage()
	* magick (animate.c, command.c, display.c, image.c, nt_feature.c)
	Pass image->colorspace to TransformRGBImage().
	* magick/nt_feature.c: Ensure that image is RGB prior to transfer
	to HBITMAP.

2002-12-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* magick/image.c: Re-worked RGBTransformImage so that it is now
	smoking fast for Q:8 and Q:16. Changed lookup tables, and all
	per-pixel transforms to use only integer arithmetic. A
	pre-multiplication scheme is used which should actually improve