@@ -1,3 +1,6 @@
+2003-01-04  Derry Bryson  <dbryson@techass.com>
+	* magick/decorate.c: Fix typo.
+
 2002-12-31  Cristy  <cristy@mystic.es.dupont.com>
 	* magick/command.c: Do not quantize CMYK (bug fix).
 	* magick/render.c: Ensure that stroke is not drawn wider than
